# D-Manifold

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dub.json
.github/workflows/: ci.yml
examples/: boolean.d
source/manifold/: c.d
